# MultiStreamAI

./: LICENSE  MultiStreamAI.pro  README.md  cameraview.cpp  cameraview.h  cameraviewQt6.cpp  cameraviewQt6.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediastream.cpp  mediastream.h  mediastreamQt6.cpp  mediastreamQt6.h  streamcontainer.cpp  streamcontainer.h  streamview.cpp  streamview.h  videoview.cpp  videoview.h
Apps/: AppsFactory.h  appbaseclass.cpp  appbaseclass.h  appcommon.h  appmanager.cpp  appmanager.h  appsequencer.h
Apps/AppNetworkProcess/: arcface_process.cpp  arcface_process.h  lprnet_process.cpp  lprnet_process.h  yolov4Tiny_license_plate_det_process.cpp  yolov4Tiny_license_plate_det_process.h  yolov5_faceDet_process.cpp  yolov5_faceDet_process.h  yolov5_instance_seg_process.cpp  yolov5_instance_seg_process.h  yolov5_process.cpp  yolov5_process.h  yolov5_vehicle_process.cpp  yolov5_vehicle_process.h  yolov7_process.cpp  yolov7_process.h  yolov7tiny_process.cpp  yolov7tiny_process.h
Apps/FaceRecognition/: arcface_process.cpp  arcface_process.h  faceRecognition.cpp  faceRecognition.h  yolov5_faceDet_process.cpp  yolov5_faceDet_process.h
Apps/LPR/: Lpr.cpp  Lpr.h
Apps/ObjectDetection/: objectdetection.cpp  objectdetection.h  yolov5_process.cpp  yolov5_process.h
Apps/Segmentation/: segmentation.cpp  segmentation.h
Installs/RK3588/: QTInstall.txt
MultiNetworkPipeline/: MultiNetworkPipeline.cpp  MultiNetworkPipeline.hpp  MultiNetworkPipeline.pro  README.md
MultiNetworkPipeline-Scheduler/: CMakeLists.txt  Makefile  MultiNetworkPipeline-scheduler.cpp  MultiNetworkPipeline-scheduler.hpp  MultiNetworkPipeline.pro  README.md  main_test.cpp
MultiNetworkPipeline-Scheduler/SimpleSample/: CMakeLists.txt  README.md  build.sh  main_test.cpp
MultiNetworkPipeline-Scheduler/Test/: CMakeLists.txt  MNP_Unittest.cpp  build.sh  main_test.cpp
MultiNetworkPipeline/Test/: MNP_Statistics.cpp  MNP_Unittest.cpp
MultiNetworkPipeline/Utils/: Timer.hpp
Utils/database/: FaceDatabase.cpp  FaceDatabase.hpp
Utils/hailo-common/: hailo_objects.hpp  hailo_tensors.hpp
Utils/tracking/: hailo_tracker.cpp  hailo_tracker.hpp
Utils/tracking/jde_tracker/: jde_tracker_lapjv.hpp  kalman_filter.hpp  lapjv.hpp
Utils/xtensor-master/: README.md
Utils/xtensor-master/include/xtensor/: xstrides.hpp  xview.hpp
Utils/xtl-master/: README.md
Utils/yolo-nms-decoder/: yolo_nms_decoder.hpp  yolov5_face_decoder.hpp
